fixed padding-top on smaller devices

--- a/css/app.css
+++ b/css/app.css
@@ -66,9 +66,22 @@
     color: #c91b1b;
 }
 
-
-
-
 body, h1, h2, h3, h4, h5, h6 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+#search-container {
+    padding-top: 7%;
+}
+
+@media only screen and (max-width: 560px) {
+    #search-container {
+        padding-top: 10%;
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    #search-container {
+        padding-top: 15%;
+    }
 }
